fix: Repair demo unnecessary click

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="card">
       <h2>加入小图标</h2>
       <div style="width: 50%;margin: 0 auto;background-color: #eee;">
-        <vue-marquee :text="text" @click="changeText='您好呀，感谢来访~'">
+        <vue-marquee :text="text">
           <img src="./src/assets/img/notice.png" alt="">
         </vue-marquee>
       </div>
